test/zinc_source/compile_errors/concurrency/11_context_with_cancel_non_context.zn
// expected-error: Context.with_cancel\(\) expects a context argument

fn main() {
    child, cancel = Context.with_cancel(1)
    print("{child}")
    cancel()
}
